# profiler

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Counter_8h_source.html  Dockerfile  Doxyfile  Doxyfile.in  Doxyfile.old  Node_8h_source.html  Profiler.cpp  Profiler.h  ProfilerC.h  ProfilerC_8h_source.html  ProfilerF.F90  Profiler_8h_source.html  README.md  README.rst  SortBy_8h_source.html  Timer_8h_source.html  WeakSingleton_8h_source.html  annotated.html  annotated.js  classmolpro_1_1profiler_1_1Counter-members.html  classmolpro_1_1profiler_1_1Counter.html  classmolpro_1_1profiler_1_1Counter.js  classmolpro_1_1profiler_1_1Counter__coll__graph.dot  classmolpro_1_1profiler_1_1Node-members.html  classmolpro_1_1profiler_1_1Node.html  classmolpro_1_1profiler_1_1Node.js  classmolpro_1_1profiler_1_1Node__coll__graph.dot  classmolpro_1_1profiler_1_1Profiler-members.html  classmolpro_1_1profiler_1_1Profiler.html  classmolpro_1_1profiler_1_1Profiler.js  classmolpro_1_1profiler_1_1Timer-members.html  classmolpro_1_1profiler_1_1Timer.html  classmolpro_1_1profiler_1_1Timer.js  classmolpro_1_1profiler_1_1dotgraph_1_1GraphEntry-members.html  classmolpro_1_1profiler_1_1dotgraph_1_1GraphEntry.html  classmolpro_1_1profiler_1_1dotgraph_1_1GraphEntry.js  dir_153951e894f214e7308b43ddb9576f8e.html  (+59 more)
DoxygenTagFiles/: profiler.tag
benchmark/: CMakeLists.txt  benchmark-cpp.cpp  benchmark-f.F90
cmake/: LibraryManager.cmake  LibraryManagerUtils.cmake  libconfig2.cmake
dependencies/: CMakeLists.txt  utilities_SHA1
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Profiler.dox
docker/: Dockerfile
docs/: conf.py  index.rst  intro.rst  library_manager.rst  library_manager_utils.rst
example/: CMakeLists.txt  profiler-example.cpp  profiler-fortran-example.F90  profiler-singleton-example.cpp  readme-example.cpp  timing_molpro.cpp
lib/: CMakeLists.txt  Profiler-config.h.in  Profiler.cpp  Profiler.h  Profiler.h.in  ProfilerBackend.h  ProfilerC.cpp  ProfilerC.h  ProfilerF.F90  ProfilerMPI.cpp  ProfilerMPI.h  ProfilerSerial.cpp  ProfilerSerial.h  ProfilerSingle.cpp  ProfilerSingle.h  libconfig.cmake
lib/molpro/: CMakeLists.txt  Profiler.h  ProfilerC.cpp
lib/molpro/Profiler/: CMakeLists.txt  ProfilerMPI.cpp  ProfilerMPI.h  ProfilerSerial.cpp  ProfilerSerial.h
lib/mpi/: CMakeLists.txt  ProfilerMPI.cpp  ProfilerMPI.h  ProfilerMPIConfig.h.in
lib/serial/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+32 more)
src/: CMakeLists.txt
src/molpro/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerC.cpp  ProfilerC.h  ProfilerF.F90  ProfilerSingle.cpp  ProfilerSingle.h
src/molpro/Profiler/: CMakeLists.txt  Node.h  ProfilerMPI.cpp  ProfilerMPI.h  ProfilerMPIConfig.h.in  ProfilerSerial.cpp  ProfilerSerial.h  Timer.h  report.h
src/molpro/Profiler/Tree/: CMakeLists.txt  Counter.cpp  Counter.h  Node.h  Profiler.cpp  Profiler.h  Reporter.cpp  Reporter.h  Timer.cpp  Timer.h  WeakSingleton.h  report.cpp  report.h
src/molpro/profiler/: CMakeLists.txt  Counter.cpp  Counter.h  Node.h  Profiler.cpp  Profiler.h  SortBy.h  Timer.cpp  Timer.h  WeakSingleton.h  dotgraph.cpp  dotgraph.h  mpi.h  report.cpp  report.h
test/: CMakeLists.txt  main.cpp  mainF.F90  testCounter.cpp  testNode.cpp  testProfiler.cpp  testTimer.cpp  test_report.cpp  test_robustness.cpp
